<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewStay"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="152dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/staylogo" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="240dp"
            android:text="Login"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="Email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassword"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="15dp"
            android:text="Remember me"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/custom_button"
            android:text="Log in"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberMe" />



        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="20dp"
            android:text="Don't have an account?"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <TextView
            android:id="@+id/textCreateOne"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="Create One."
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textCreateAccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <TextView

            android:id="@+id/ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="95dp"
            android:text="Forgot Password?"
            android:fontFamily="@font/montserrat"
            android:textStyle="italic"
            android:textColor="@color/stay_red"
            android:textFontWeight="600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rememberMe"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />
        <ImageView
            android:id="@+id/imageViewBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>