...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/stayLogo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="152dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
